# gnome-shell-extensions

./: configure.ac  meson.build
data/: gnome-classic.css
extensions/apps-menu/: extension.js
extensions/dash-to-dock/: dockedDash.js  meson.build  metadata.json.in  theming.js  windowPreview.js
extensions/no-hot-corner/: Makefile.am  extension.js  metadata.json.in
extensions/panel-favorites/: Makefile.am  metadata.json.in
extensions/systemMonitor/: classic.css  extension.js  meson.build  stylesheet.css
extensions/top-icons/: extension.js  metadata.json.in
extensions/updates-dialog/: Makefile.am  extension.js  metadata.json.in
po/: POTFILES.in
